# simple-gcp-rag

./: README.md  chat.ipynb  pyproject.toml
simple_gcp_rag/: .env  __init__.py  chat.py  db_deploy.py
simple_gcp_rag/utils/: gcp.py
